Fix layout issue with new rows and set mininum height for tiles so the background controls are not visible.

--- a/www/custom.css
+++ b/www/custom.css
@@ -99,6 +99,12 @@
   padding-right: 2px;
 }
 
+.tab-content {
+  min-height: 100px !important;
+}
+
+
+/*-- OUD --*/
 
 
 .page-container.layout-visible {
